tests-integration/tests/roundtrip/invalid/semantic/typecheck/int_var_in_bool_expr/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/int_var_in_bool_expr/int_var_in_bool_expr.essence:3:11:
  |
3 | such that x \/ y
  |           ^
Type error:
	Expected: bool
	Got: int

tests/roundtrip/invalid/semantic/typecheck/int_var_in_bool_expr/int_var_in_bool_expr.essence:3:16:
  |
3 | such that x \/ y
  |                ^
Type error:
	Expected: int
	Got: bool

